# ACS

./: README.md
Task1/: CMakeLists.txt  circle.cpp  circle.h  color.cpp  color.h  container.cpp  container.h  extensions.cpp  extensions.h  k  main.cpp  point.h  rectangle.cpp  rectangle.h  rnd.h  shape.cpp  shape.h  triangle.cpp  triangle.h
Task1/tests/: out21.txt  out22.txt  out31.txt  out32.txt  out41.txt  out42.txt  test01.txt  test2.txt  test4.txt  test5.txt
Task2/: CMakeLists.txt  main.cpp
Task2/answers/: ans11.txt  ans12.txt  ans31.txt  ans32.txt  ans41.txt  ans42.txt  ans51.txt  ans52.txt
Task2/container/: container.cpp  container.h
Task2/extension/: extension.h
Task2/random/: random.cpp  random.h
Task2/shape/: shape.cpp  shape.h
Task2/shape/circle/: circle.cpp  circle.h
Task2/shape/color/: color.cpp  color.h
Task2/shape/point/: point.cpp  point.h
Task2/shape/rectangle/: rectangle.cpp  rectangle.h
Task2/shape/triangle/: triangle.cpp  triangle.h
Task2/tests/: test1.txt  test3.txt  test4.txt  test5.txt
Task3/: README.md  main.py
Task3/answers/: ans11.txt  ans12.txt  ans21.txt  ans22.txt  ans31.txt  ans32.txt  ans41.txt  ans42.txt  ans51.txt  ans52.txt
Task3/container/: containe.py  container.py
Task3/extensions/: random_extension.py
Task3/shape/: circle.py  color.py  point.py  rectangle.py  shape.py  triangle.py
Task3/shapes/: circle.py  color.py  point.py  rectangle.py  shape.py  triangle.py
Task3/shapes/factory/: shape_factory.py
Task3/tests/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
Task5/: CMakeLists.txt  flockOfBees.cpp  flockOfBees.h  main.cpp
Task5/bees/: beehive.cpp  beehive.h  flockOfBees.cpp  flockOfBees.h
Task5/helpers/: sleepTimeHelper.cpp
Task5/region/: region.cpp  region.h
